2004-10-04  Peter Kirchgessner <peter@kirchgessner.net>

	* backend/hp.h backend/hp.c backend/hp-scl.c:
	  Fixed bug #300973 (renamed global function hp_init_openfd
	  to sanei_hp_init_openfd

2004-10-04  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek.c: Fixed bug #300963.
	* doc/plustek/Plustek-USB.changes: Update.
	* po/*.po: Update.

2004-10-03  Thomas Soumarmon <thomas.soumarmon@cogitae.net>

	* backend/hp5400_debug.c backend/hp5400_debug.h 
	  backend/hp5400_internal.c backend/hp5400_sane.c: 
	  removing more hp5400 compilation warnings

2004-10-03  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Nikon LS-5000 ED (bug
	  #300972). 
	* include/sane/saneopts.h: Added option for turning off the
	  scanner's lamp on exit (bug #300963).
	* backend/gt68xx.c backend/gt68xx_high.h: Used new lamp option
	  from saneopts.h (bug #300963).
	* backend/net.c doc/descriptions/net.desc: Check for (size_t) -1
	  doesn't work on 64 bit platforms as size_t is 64 bits there
	  while the length of a data block is defined as 32 bits in the
	  SANE network standard (bug #300837).
	* backend/microtek2.c backend/microtek2.h: Fixed some warnings
	  (bug #300823). Fixed Microtek Phantom C6 scanning on big endian
	  platforms. Based on patch from Matijs van Zuijlen in Debian bug
	  tracking system (#274523).
	* sanei/sanei_auth.c sanei/sanei_lm983x.c sanei/sanei_wire.c
	  backend/artec.c backend/artec_eplus48u.c backend/as6e.c
	  backend/avision.c backend/canon-sane.c backend/canon-scsi.c
	  backend/canon.c backend/canon630u-common.c backend/dc25.c
	  backend/epson.c backend/fujitsu.c backend/gt68xx_low.c
	  backend/hp5400_internal.c backend/hp5400_sanei.c
	  backend/ma1509.c backend/microtek.c backend/microtek2.c
	  backend/mustek.c backend/mustek_scsi_pp.c backend/nec.c
	  backend/net.c backend/pie.c backend/sharp.c
	  backend/snapscan-scsi.c backend/snapscan-sources.c
	  backend/snapscan-usb.c backend/snapscan.c backend/teco3.c